Bug 93328 - [KBL/BSW/IVB] testdisplay -y fails
Summary: [KBL/BSW/IVB] testdisplay -y fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Humberto Israel Perez Rodriguez
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-10 14:39 UTC by cprigent
Modified: 2017-11-28 15:54 UTC (History)
1 user (show)

See Also:
i915 platform: BSW/CHT, IVB, KBL
i915 features: display/HDMI


Attachments
kern.log (159.62 KB, text/plain)
2016-03-17 13:37 UTC, cprigent
no flags Details

Description cprigent 2015-12-10 14:39:39 UTC
Setup Q4 stack release:
-----------------------
CPU : Intel(R) Celeron N3060 1.60GHz @ 1.6 GHz (family: 6, model: 76 stepping: 4)
SoC : BSW D0
QDF : K6XC
CRB : BRASWELL RVP Fab2
Mandatory Reworks : All
Feature Reworks: F28, F32,F33 & F37
Optional reworks : O-01a
Software
Linux OS: Ubuntu 15.04 64 bits
BIOS : BRAS.X64.B088.R00.1510270350
TXE FW : 2.0.0.2093
Ksc : 1.08
Kernel: 4.3 mainline from https://git.kernel.org/cgit/linux/kernel/git/torvalds/linux.git/log/?id=refs/tags/v4.3
xorg-server-1.18.0 from http://cgit.freedesktop.org/xorg/xserver
libdrm-2.4.65 from http://cgit.freedesktop.org/mesa/drm/
xf86-video-intel 2.99.917 from http://cgit.freedesktop.org/xorg/driver/xf86-video-intel/
mesa-11.0.4 from http://cgit.freedesktop.org/mesa/mesa/
libva-1.6.2.pre1 from http://cgit.freedesktop.org/libva/
vaapi-intel-driver 1.6.2.pre1 from http://cgit.freedesktop.org/vaapi/intel-driver
cairo 1.14.4 from http://cgit.freedesktop.org/xorg/app/intel-gpu-tools/tag/?id=intel-gpu-tools-1.13

Monitor connected to display port

Steps:
------
1. Execute commands:
cd <...>/intel-gpu-tools/tests
./testdisplay -y

Actual result:
--------------
1. Test is Fail

Expected result:
----------------
1. Test is Pass
Comment 1 cprigent 2015-12-10 14:40:28 UTC
Assigned to Rami to provide log from IGT and dmesg
Comment 2 Elio 2016-02-29 17:30:22 UTC
With the following configuration is working for me
Software
Linux distribution: Ubuntu 15.10 64 bits
Kernel drm-intel-nightly 4.5.0-rc5_1a139ea from http://cgit.freedesktop.org/drm-intel/
commit 1a139ead792d8e912aa13d413b9cf59811fde676
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Mon Feb 22 10:48:46 2016 +0200
 drm-intel-nightly: 2016y-02m-22d-08h-48m-06s UTC integration manifest
drm: tag libdrm-2.4.66 9b77443 from http://cgit.freedesktop.org/mesa/drm/
mesa: tag mesa-11.1.1 330aa44from http://cgit.freedesktop.org/mesa/mesa/
cairo: tag 1.15.2 db8a7f1 from http://cgit.freedesktop.org/cairo
waffle: master bb29b2a from https://github.com/waffle-gl/waffle
xorg-server-macros: master d7acec2 from git://git.freedesktop.org/git/xorg/util/macros
libva: tag libva-1.6.1 1f026de from http://cgit.freedesktop.org/libva/
vaapi-intel-driver: tag 1.6.1 f6fe842 from http://cgit.freedesktop.org/vaapi/intel-driverFirmware

Firmware
(APL)DMC 1.06 from https://01.org/linuxgraphics/downloads/broxton-dmc-1.06


Output:
 sudo ./testdisplay -y
[sudo] password for gfx:
CRTC(21):[0]  1920x1080 60 1920 1968 2018 2052 1080 1084 1086 1122 0xa 0x48 138120
CRTC(21):[0]  1920x1080 60 1920 2008 2052 2200 1080 1084 1089 1125 0x5 0x48 148500
CRTC(21):[1]  1680x1050 60 1680 1784 1960 2240 1050 1053 1059 1089 0x6 0x40 146250
CRTC(21):[2]  1280x1024 60 1280 1328 1440 1688 1024 1025 1028 1066 0x5 0x40 108000
CRTC(21):[3]  1440x900 60 1440 1520 1672 1904 900 903 909 934 0x6 0x40 106500
CRTC(21):[4]  1280x960 60 1280 1376 1488 1800 960 961 964 1000 0x5 0x40 108000
CRTC(21):[5]  1280x720 60 1280 1390 1430 1650 720 725 730 750 0x5 0x40 74250
CRTC(21):[6]  1024x768 60 1024 1048 1184 1344 768 771 777 806 0xa 0x40 65000
CRTC(21):[7]  800x600 60 800 840 968 1056 600 601 605 628 0x5 0x40 40000
CRTC(21):[8]  640x480 60 640 656 752 800 480 490 492 525 0xa 0x40 25200
CRTC(21):[9]  720x400 70 720 738 846 900 400 412 414 449 0x6 0x40 28320
SUCCESS (-1.000s)
Comment 3 cprigent 2016-03-17 13:37:22 UTC
Created attachment 122375 [details]
kern.log

Fail reproduced:

#./testdisplay -y
(testdisplay:2417) igt-fb-CRITICAL: Test assertion failure function igt_create_fb_with_bo_size, file igt_fb.c:527:
(testdisplay:2417) igt-fb-CRITICAL: Failed assertion: (__kms_addfb(fd, fb->gem_handle, width, height, fb->stride, format, tiling, (1<<1), &fb_id)) == 0
(testdisplay:2417) igt-fb-CRITICAL: Last errno: 22, Invalid argument
Test (null) failed.
**** DEBUG ****
(testdisplay:2417) igt-core-DEBUG: Test requirement passed: !igt_run_in_simulation()
(testdisplay:2417) drmtest-DEBUG: Test requirement passed: fd >= 0
(testdisplay:2417) igt-kms-DEBUG: VT: graphics mode set (mode was 0x0)
(testdisplay:2417) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258 [bpp=32], tiling=0x100000000000002, size=0)
(testdisplay:2417) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=1, pitch=7680)
(testdisplay:2417) ioctl-wrappers-DEBUG: Test requirement passed: has_modifiers
(testdisplay:2417) igt-fb-CRITICAL: Test assertion failure function igt_create_fb_with_bo_size, file igt_fb.c:527:
(testdisplay:2417) igt-fb-CRITICAL: Failed assertion: (__kms_addfb(fd, fb->gem_handle, width, height, fb->stride, format, tiling, (1<<1), &fb_id)) == 0
(testdisplay:2417) igt-fb-CRITICAL: Last errno: 22, Invalid argument
****  END  ****
Stack trace:
  #0 [__igt_fail_assert+0xf1]
  #1 [igt_create_fb_with_bo_size+0x398]
  #2 [igt_create_fb+0x18]
  #3 [igt_create_pattern_fb+0x18]
  #4 [update_display+0x22b]
  #5 [main+0x6f3]
  #6 [__libc_start_main+0xf5]
  #7 [_start+0x29]
  #8 [<unknown>+0x29]
FAIL (-1.000s)


Hardware: 
Motherboard: Aspire XC-704 
cpu model name : Intel(R) Pentium(R) CPU N3700 @ 1.60GHz 
cpu model : 76 
cpu family : 6 
Graphic card: Device 22b1 (rev 21)

Software:
Ubuntu 14.04
Bios: R01-A2
Kernel mainline 4.4.0 from https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git
  commit afd2ff9b7e1b367172f18ba7f693dfb62bdcb2dc
  Author: Linus Torvalds <torvalds@linux-foundation.org>
  Date:   Sun Jan 10 15:01:32 2016 -0800
  Linux 4.4
drm: libdrm-2.4.67-5 ea07de9 from git://anongit.freedesktop.org/mesa/drm
mesa: tag mesa-11.1.2 7bcd827 from git://anongit.freedesktop.org/mesa/mesa
cairo: tag 1.15.2 db8a7f1 from git://anongit.freedesktop.org/cairo
waffle: master bb29b2a from git://github.com/waffle-gl/waffle
xorg-server-macros: tag: util-macros-1.19.0-2 d7acec2 from git://git.freedesktop.org/git/xorg/util/macros
xserver: tag: xorg-server-1.18.1 23e60f9 from git://git.freedesktop.org/git/xorg/xserver
xf86-video-intel: tag 2.99.917-560 d167280 from git://anongit.freedesktop.org/xorg/driver/xf86-video-intel
libva: tag libva-1.7.0.pre1 35f1447 from git://git.freedesktop.org/git/vaapi/libva
vaapi-intel-driver: tag 1.7.0.pre1 ab8e4e3 from git://anongit.freedesktop.org/vaapi/intel-driver
IGT 1.14 364d378 from http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git

One external screen connected to HDMI: Asus PB238Q
Comment 4 Humberto Israel Perez Rodriguez 2016-04-20 17:39:49 UTC
this test fail on KBL with the following configuration :

Hardware information
========================================================
Platform                            : KBL (RVP7)
Motherboard model                   : Kabylake Client platform
Motherboard type                    : Skylake U DDR3L RVP7 Laptop
Motherboard manufacturer            : Intel Corporation
CPU family                          : Other
CPU information                     : Genuine Intel(R) CPU 0000 @ 2.60GHz
GPU Card                            : Intel Corporation Device 5916 (prog-if 00 [VGA controller])
Memory ram                          : 4 GB
Maximum memory ram allowed          : 16 GB
CPU's number                        : 4


Software information
========================================================
Linux distribution : Ubuntu 15.10 x64
Bios  : 75.03
KSC   : 1.20


Graphic stack
=========================================================

 --> Component : drm 
	 url : http://cgit.freedesktop.org/mesa/drm 
	 tag : libdrm-2.4.67-25-gcc9a53f 
	 commit : cc9a53f 
	 author : Daniel Vetter <daniel.vetter@ffwll.ch> 
	 age : 3 weeks ago 
 --> Component : mesa 
	 url : http://cgit.freedesktop.org/mesa/mesa 
	 tag : mesa-11.1.2 
	 commit : 7bcd827 
	 author : Emil Velikov <emil.velikov@collabora.com> 
	 age : 10 weeks ago 
 --> Component : xf86-video-intel 
	 url : http://cgit.freedesktop.org/xorg/driver/xf86-video-intel 
	 tag : 2.99.917-634-g81029be 
	 commit : 81029be 
	 author : Chris Wilson <chris@chris-wilson.co.uk> 
	 age : 2 days ago 
 --> Component : libva 
	 url : http://cgit.freedesktop.org/libva/ 
	 tag : libva-1.7.0-1-g2339d10 
	 commit : 2339d10 
	 author : Xiang Haihao <haihao.xiang@intel.com> 
	 age : 5 weeks ago 
 --> Component : vaapi (intel-driver) 
	 url : http://cgit.freedesktop.org/vaapi/intel-driver 
	 tag : 1.7.0-8-g2c1bec0 
	 commit : 2c1bec0 
	 author : peng.chen <peng.c.chen@intel.com> 
	 age : 13 days ago 
 --> Component : cairo 
	 url : http://cgit.freedesktop.org/cairo 
	 tag : 1.15.2 
	 commit : db8a7f1 
	 author : Bryce Harrington <bryce@osg.samsung.com> 
	 age : 4 months ago 
 --> Component : xserver 
	 url :  http://cgit.freedesktop.org/xorg/xserver 
	 tag : xorg-server-1.18.0-274-g8437955 
	 commit : 8437955 
	 author : Olivier Fourdan <ofourdan@redhat.com> 
	 age : 5 weeks ago 
 --> Component : intel-gpu-tools 
	 url : http://cgit.freedesktop.org/xorg/app/intel-gpu-tools 
	 tag : intel-gpu-tools-1.14-189-g7bd2ac6 
	 commit : 7bd2ac6 
	 author : Chris Wilson <chris@chris-wilson.co.uk> 
	 age : 3 days ago 


kernel 
==============================================
commit d9131d62d18ba94fb3ca019f1156c22b5f4ce23c
Author: Tvrtko Ursulin <tvrtko.ursulin@intel.com>
Date:   Fri Apr 15 14:54:26 2016 +0100

    drm-intel-nightly: 2016y-04m-15d-13h-53m-44s UTC integration manifest


Kernel version : 4.6.0-rc3
Architecture : source amd64 all
Homepage : http://www.kernel.org/



test output
=================================
$ ./testdisplay -y
(testdisplay:1194) igt-fb-CRITICAL: Test assertion failure function igt_drm_format_to_bpp, file igt_fb.c:1243:
(testdisplay:1194) igt-fb-CRITICAL: Failed assertion: 0
(testdisplay:1194) igt-fb-CRITICAL: can't find a bpp format for 00000020 (invalid)
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [igt_drm_format_to_bpp+0x79]
  #2 [igt_create_bo_with_dimensions+0x44]
  #3 [create_cairo_surface__blit+0x63]
  #4 [get_cairo_surface+0x75]
  #5 [igt_get_cairo_ctx+0xb]
  #6 [igt_create_pattern_fb+0x28]
  #7 [update_display+0x244]
  #8 [main+0x6d0]
  #9 [__libc_start_main+0xf0]
  #10 [_start+0x29]
  #11 [<unknown>+0x29]
Test (null) failed.
**** DEBUG ****
(testdisplay:1194) igt-core-DEBUG: Test requirement passed: !igt_run_in_simulation()
(testdisplay:1194) drmtest-DEBUG: Test requirement passed: fd >= 0
(testdisplay:1194) igt-kms-DEBUG: VT: graphics mode set (mode was 0x0)
(testdisplay:1194) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=3200, height=1800, format=0x34325258, tiling=0x100000000000002, size=0)
(testdisplay:1194) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(testdisplay:1194) drmtest-DEBUG: Test requirement passed: is_i915_device(fd) && has_known_intel_chipset(fd)
(testdisplay:1194) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=1, pitch=12800)
(testdisplay:1194) ioctl-wrappers-DEBUG: Test requirement passed: has_modifiers
(testdisplay:1194) igt-fb-CRITICAL: Test assertion failure function igt_drm_format_to_bpp, file igt_fb.c:1243:
(testdisplay:1194) igt-fb-CRITICAL: Failed assertion: 0
(testdisplay:1194) igt-fb-CRITICAL: can't find a bpp format for 00000020 (invalid)
****  END  ****
FAIL (-1.000s)

real    0m0.032s
user    0m0.008s
sys     0m0.020s
Comment 5 Ville Syrjala 2016-04-20 18:14:43 UTC
Removing BSW from the platforms since it doesn't even support Y-tiled scanout.
Comment 6 Ville Syrjala 2016-04-21 10:09:48 UTC
(In reply to Humberto Israel Perez Rodriguez from comment #4)
> (testdisplay:1194) igt-fb-CRITICAL: Test assertion failure function
> igt_drm_format_to_bpp, file igt_fb.c:1243:
> (testdisplay:1194) igt-fb-CRITICAL: Failed assertion: 0
> (testdisplay:1194) igt-fb-CRITICAL: can't find a bpp format for 00000020
> (invalid)

Should be fixed by

commit 27372851c8cdec29b198bc9ec8e21f83cd1ec083
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Wed Apr 20 21:10:58 2016 +0300

    lib: Pass format instead of bpp to create_bo_for_fb()
Comment 7 cprigent 2016-04-26 18:49:14 UTC
Hi Humberto,
Could you check with the patch
Thanks
Comment 8 Humberto Israel Perez Rodriguez 2016-04-26 19:04:03 UTC
(In reply to cprigent from comment #7)
> Hi Humberto,
> Could you check with the patch
> Thanks

i could not found the commit 27372851c8cdec29b198bc9ec8e21f83cd1ec083, but with the following kernel this issue is not happen on KBL

commit 1e81bacf1f7fdbdf83f46b55389713fa13cb1256
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Apr 24 11:36:51 2016 +0100

    drm-intel-nightly: 2016y-04m-24d-10h-36m-11s UTC integration manifest
Comment 9 Ville Syrjala 2016-04-26 19:13:03 UTC
(In reply to Humberto Israel Perez Rodriguez from comment #8)
> (In reply to cprigent from comment #7)
> > Hi Humberto,
> > Could you check with the patch
> > Thanks
> 
> i could not found the commit 27372851c8cdec29b198bc9ec8e21f83cd1ec083

It's an igt commit
Comment 10 Humberto Israel Perez Rodriguez 2016-04-26 20:43:41 UTC
(In reply to Ville Syrjala from comment #9)
> (In reply to Humberto Israel Perez Rodriguez from comment #8)
> > (In reply to cprigent from comment #7)
> > > Hi Humberto,
> > > Could you check with the patch
> > > Thanks
> > 
> > i could not found the commit 27372851c8cdec29b198bc9ec8e21f83cd1ec083
> 
> It's an igt commit

i confirm that with this IGT commit works
Comment 11 Elio 2016-06-20 18:21:47 UTC
This problem is present in BSW with following configuration:

Configuration:


============================================ 
Kernel version              	: 4.7.0-040700rc2-generic 
Linux distribution          	: Ubuntu 16.04 LTS 
Architecture                	: 64-bit 
Mesa version                	: 11.2.2
xf86-video-intel version    	: 2.99.917 
Xorg-Xserver version        	: 1.18.3 
DRM version                 	: 2.4.67 
VAAPI version               	: Intel i965 driver for Intel(R) CherryView - 1.7.0 
Cairo version               	: [1m[1;31mNot found[0m 
Intel GPU Tools version     	: 1.15-1 <-- [1;33mThis is a generic version of IGT[0m 
Kernel driver in use        	: [1m[1;32mi915[0m 
Hardware acceleration        	:  
Bios revision               	: 4.0 
KSC revision                	: [1m[1;31mNot found[0m <-- [1;33mmaybe the DUT doesn't has this firmware[0m 


 [1m[1;34mHardware information[0m 
============================================ 
Platform                     	:  
Motherboard model            	: Inspiron 15-3552 
Motherboard type             	: 0T14MC Portable 
Motherboard manufacturer     	: Dell Inc. 
CPU family                   	: Pentium 
CPU information              	: Intel(R) Pentium(R) CPU  N3700  @ 1.60GHz 
GPU Card                     	: Intel Corporation Device 22b1 (rev 21) (prog-if 00 [VGA controller]) 
Memory ram                   	: 4 GB 
Maximum memory ram allowed   	: 8 GB 
Display resolution       	:  
CPU's number             	: 4 
Hard drive Capacity 		: 128 GB
Comment 12 cprigent 2016-07-01 14:57:09 UTC
(In reply to Elio from comment #11)

The test should skip on BSW. BSW does not support Y-tiled scanout.
Bug 93328 is closed. Feel free to report a new bug to track it.
Comment 13 Hector Velazquez 2017-11-28 15:54:03 UTC
Like future reference: 
This test has the same result on IVB QA

$sudo -E ./testdisplay -y

with this config:

IGT-Version: 1.20-g4c57ff4 (x86_64) (Linux: 4.14.0-drm-tip-ww47-commit-f710441+ x86_64)

Component: drm
    tag: libdrm-2.4.83-56-g18ffe48
    commit: 18ffe485cdfa41d48b6f2d3080cb990d28c27d57

Component: cairo
    tag: 1.15.8-57-g17e2abc
    commit: 17e2abc992b012ac3dceb2f66fba17d312ae6d77

Component: intel-gpu-tools
    tag: intel-gpu-tools-1.20-117-gf8f6db9
    commit: f8f6db9ced0061229018fa658cf1c80c56464686

Component: piglit
    tag: piglit-v1
    commit: 2ada920d5702aa86853066559e7f941f8f5f37f2


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.